# indi-alpaca

./: .astylerc  .gitignore  CMakeLists.txt  Makefile  README.md  config.h.cmake  discovery.cpp  discovery.h  indi_alpaca.xml.cmake  jsonRequest.h  jsonrequest.cpp  ubuntu-amd64.Dockerfile
devices/: base.cpp  base.h  camera.h  covercalibrator.cpp  covercalibrator.h  dome.cpp  dome.h
